syntax = "proto3";

option csharp_namespace ="gRPCClient.Proto";


package protobuf;

service UserService {
  rpc CreateUser(RequestUserInfo) returns (ResponseUserInfo);
}

message RequestUserInfo{
  string email = 1;
  string password = 2;
  string first_name = 3;
  string last_name = 4;
  string phone = 5;
  string address = 6;
  string drive_license = 7;
}
message ResponseUserInfo{
  string first_name = 1;
  string last_name = 2;
  string phone = 3;
  string address = 4;
  string email = 5;
}